# solana-yield-adapter-standard

./: .gitignore  .vercelignore  AGENTS.md  Anchor.toml  Cargo.toml  LICENSE  QUICKSTART.md  README.md  SUBMISSION.md  Surfpool.toml  package-lock.json  package.json  tsconfig.json  vercel.json
.github/workflows/: ci.yml
Docs/troubleshooting/: drift-fork-issues.md
crates/yield-adapter-trait/: Cargo.toml  README.md
crates/yield-adapter-trait/src/: discriminators.rs  lib.rs
docs/: ADAPTER_STANDARD.md  BUILD_YOUR_OWN_ADAPTER.md  REFERENCE_IMPLEMENTATION.md
docs-site/: adapter-standard.mdx  architecture.mdx  dispatcher.mdx  docs.json  index.mdx  introduction.mdx  quickstart.mdx  registry.mdx
docs-site/adapters/: drift.mdx  jupiter.mdx  kamino.mdx  maple.mdx  marginfi.mdx
docs-site/guides/: build-your-own-adapter.mdx  deployment.mdx  mintlify-publishing.mdx  quasar-port.mdx  reference-implementation.mdx  testing.mdx
docs-site/overview/: at-a-glance.mdx  documentation-map.mdx  get-started.mdx  one-interface.mdx  whats-in-repo.mdx
docs-site/reference/: errors.mdx  events.mdx  idl.mdx
programs/adapter-drift/: Cargo.toml
programs/adapter-drift/src/: lib.rs  protocol.rs  state.rs
programs/adapter-drift/src/instructions/: cancel_unstake.rs  current_value.rs  deposit.rs  initialize.rs  mod.rs  set_cooldown.rs  settle_withdrawal.rs  toggle_status.rs  withdraw.rs
programs/adapter-jupiter/: Cargo.toml
programs/adapter-jupiter/src/: lib.rs  protocol.rs  state.rs
programs/adapter-jupiter/src/instructions/: current_value.rs  deposit.rs  initialize.rs  mod.rs  toggle_status.rs  withdraw.rs
programs/adapter-kamino/: Cargo.toml
programs/adapter-kamino/src/: lib.rs  protocol.rs  state.rs
programs/adapter-kamino/src/instructions/: current_value.rs  deposit.rs  initialize.rs  toggle_status.rs  withdraw.rs
programs/adapter-maple/: Cargo.toml
programs/adapter-maple/src/: lib.rs  protocol.rs  state.rs
programs/adapter-maple/src/instructions/: current_value.rs  deposit.rs  initialize.rs  toggle_status.rs  withdraw.rs
programs/adapter-marginfi/: Cargo.toml
programs/adapter-marginfi/src/: lib.rs  protocol.rs  state.rs
programs/adapter-marginfi/src/instructions/: current_value.rs  deposit.rs  initialize.rs  toggle_status.rs  withdraw.rs
programs/adapter-registry/: Cargo.toml
programs/adapter-registry/src/: error.rs  lib.rs  state.rs
programs/adapter-registry/src/instructions/: accept_governance.rs  approve_adapter.rs  force_transfer_governance.rs  initialize.rs  mod.rs  propose_adapter.rs  revoke_adapter.rs  set_guardian.rs  transfer_governance.rs
programs/adapter-template/: Cargo.toml
programs/adapter-template/src/: lib.rs  protocol.rs  state.rs
programs/adapter-template/src/instructions/: current_value.rs  deposit.rs  initialize.rs  toggle_status.rs  withdraw.rs
programs/yield-dispatcher/: Cargo.toml
programs/yield-dispatcher/src/: adapter_cpi.rs  adapter_validation.rs  error.rs  events.rs  lib.rs  state.rs
programs/yield-dispatcher/src/instructions/: current_value.rs  deposit.rs  initialize.rs  mod.rs  toggle_pause.rs  withdraw.rs
scripts/: bounty-check.sh  build-idls.sh  build-sbf.sh  deploy-devnet.sh  gen-fork-syrup-usdc-fixture.mjs  gen-fork-usdc-fixture.mjs  gen-surfpool-snapshot.sh  install-toolchain.sh  patch-cargo-registry.sh  probe-drift-if.sh  run-fork-surfpool.sh  run-fork-tests.sh  run-mainnet-fork-tests.sh  setup-fork-syrup-usdc-fixture.sh  setup-fork-usdc-fixture.sh  validate.sh
skills/build-yield-adapter/: SKILL.md
tests/: README.md  dispatcher.test.ts  registry.test.ts
tests/adapters/: drift.test.ts  jupiter.test.ts  kamino.test.ts  maple.test.ts  marginfi.test.ts  template.test.ts
tests/fixtures/: fork-usdc-ata.json  fork-wallet.json
tests/helpers/: adapter.ts  conformance.ts  constants.ts  dispatcher.ts  index.ts  maple.ts
