[package]
name = "adapter-kamino"
version = "1.0.0"
description = "Kamino USDC yield adapter for the Solana Yield Adapter Standard"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "adapter_kamino"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl = { workspace = true }
yield-adapter-trait = { path = "../../crates/yield-adapter-trait" }
