[package]
name = "adapter-registry"
version = "1.0.0"
description = "Governance-gated on-chain registry for Solana Yield Adapter Standard"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "adapter_registry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]
default = []

[dependencies]
anchor-lang = { workspace = true }
yield-adapter-trait = { path = "../../crates/yield-adapter-trait" }
